%% ===========================================================================
%% Event Sharing Platform — Entity Relationship Diagram
%% ===========================================================================
%% The app-domain user is unified onto Better Auth's `user` table: it gains
%% username, display_name, is_active, plan_id (and reuses `image` as avatar).
%% Credentials live in `account` (Better Auth), not on `user`.
%%
%% ENUMs:
%%   event_visibility : public | private
%%   media_type       : image | video | audio | document | other
%%   media_visibility : event (all members) | restricted (specific users)
%%   member_role      : owner | moderator | member
%%   member_status    : pending | approved | blocked
%%
%% TRIGGERS / RULES (in the SQL migration drizzle/*_event_rules, not entities):
%%   - events insert -> creator auto-added as 'owner' member
%%   - media insert  -> plan quota check (type / file size / per-event storage)
%%   - media I/U/D   -> events.storage_used_bytes kept in sync
%%   - members I/U   -> plan max_members_per_event cap (owners are free)
%%
%% VIEW: v_event_stats (event_id, name, visibility, storage_used_bytes,
%%                      member_count [excl. owner], media_count)
%%
%% Drizzle schema files: enums.ts, plans-schema.ts, auth-schema.ts,
%%   event-schema.ts, media-schema.ts (re-exported from schema.ts).
%% ===========================================================================
erDiagram
  PLANS ||--o{ USER : "subscribes (RESTRICT)"
  USER ||--o{ EVENTS : "creates (CASCADE)"
  EVENTS ||--o{ EVENT_MEMBERS : "has (CASCADE)"
  USER ||--o{ EVENT_MEMBERS : "joins (CASCADE)"
  USER |o--o{ EVENT_MEMBERS : "invited_by (SET NULL)"
  EVENTS ||--o{ MEDIA : "contains (CASCADE)"
  USER ||--o{ MEDIA : "uploads (CASCADE)"
  MEDIA ||--o{ MEDIA_ACCESS : "restricts (CASCADE)"
  USER ||--o{ MEDIA_ACCESS : "granted to (CASCADE)"
  USER |o--o{ MEDIA_ACCESS : "granted_by (SET NULL)"
  USER ||--o{ SESSION : "has (CASCADE)"
  USER ||--o{ ACCOUNT : "has (CASCADE)"
  USER ||--o{ UPLOADS : "owns (SET NULL)"

  PLANS {
    uuid id PK
    varchar code UK "free | pro | business"
    varchar name
    integer price_cents "cents, >= 0"
    char currency "default USD"
    integer max_events "NULL = unlimited"
    integer max_members_per_event "NULL = unlimited"
    bigint max_storage_per_event_bytes
    bigint max_file_size_bytes
    media_type_arr allowed_media_types "media_type[]"
    boolean allow_downloads
    boolean is_active
    timestamptz created_at
    timestamptz updated_at
  }

  USER {
    text id PK
    text name
    text email UK
    boolean email_verified
    text image "avatar"
    text username UK
    text display_name
    boolean is_active
    uuid plan_id FK "-> plans.id (RESTRICT)"
    timestamptz created_at
    timestamptz updated_at
  }

  EVENTS {
    uuid id PK
    text creator_id FK "-> user.id"
    varchar name
    text description
    text logo_url
    text banner_url
    event_visibility visibility "default private"
    uuid share_token UK "rotate to invalidate link"
    boolean allow_downloads "NULL = inherit plan"
    bigint storage_used_bytes "trigger-maintained"
    boolean is_active
    timestamptz created_at
    timestamptz updated_at
  }

  EVENT_MEMBERS {
    uuid event_id PK "FK -> events.id"
    text user_id PK "FK -> user.id"
    member_role role "default member"
    member_status status "default approved"
    text invited_by FK "-> user.id"
    timestamptz joined_at
  }

  MEDIA {
    uuid id PK
    uuid event_id FK "-> events.id"
    text uploaded_by FK "-> user.id"
    media_type media_type
    text storage_key "object-store key"
    varchar file_name
    varchar mime_type
    bigint file_size_bytes "> 0"
    text caption "image with text"
    media_visibility visibility "default event"
    timestamptz created_at
    timestamptz updated_at
  }

  MEDIA_ACCESS {
    uuid media_id PK "FK -> media.id"
    text user_id PK "FK -> user.id"
    text granted_by FK "-> user.id"
    timestamptz created_at
  }

  UPLOADS {
    uuid id PK
    text key
    text url
    text content_type
    text user_id FK "-> user.id"
    timestamptz created_at
  }

  SESSION {
    text id PK
    text token UK
    timestamptz expires_at
    text ip_address
    text user_agent
    text user_id FK "-> user.id"
    timestamptz created_at
    timestamptz updated_at
  }

  ACCOUNT {
    text id PK
    text account_id
    text provider_id
    text user_id FK "-> user.id"
    text password "credential hash"
    text access_token
    text refresh_token
    timestamptz created_at
    timestamptz updated_at
  }

  VERIFICATION {
    text id PK
    text identifier
    text value
    timestamptz expires_at
    timestamptz created_at
    timestamptz updated_at
  }
